--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+  	<title>EBT Near Me</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <!-- C U S T O M   S T Y L E S -->
+    <link rel="stylesheet" href="public/css/main.css">
+  </head>
+  <body>
+  	<h1>Hello World</h1>
+  </body>
+</html>
