add logo image, building out style of page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="public/css/main.css">
   </head>
   <body>
-  	<h1>Hello World</h1>
+  	<div id="pageWrapper">
+  		<div id="wrapper">
+  			<header>
+  				<div class="stationary">
+  					<p>
+  						<a href="http://policyprototyping.github.io">
+  							<img class="logo" src="public/img/logo.png" alt="">
+  						</a>
+  					</p>
+  				</div>
+  			</header>
+  		</div>
+  	</div>
   </body>
 </html>
