new logo lockup

--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta charset="utf-8">
     <!-- C U S T O M   S T Y L E S -->
     <link rel="stylesheet" href="public/css/main.css">
+    <!-- F O N T S -->
+    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Lora:400,700,400italic,700italic|Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
   	<div id="pageWrapper">
   		<div id="wrapper">
   			<header>
   				<div class="stationary">
-  					<p>
+  					<div class="identity">
   						<a href="http://policyprototyping.github.io">
   							<img class="logo" src="public/img/logo.png" alt="">
   						</a>
-  					</p>
+  					</div>
+            <div class="title-block">
+              <p class="title">The Office of <br>Policy Prototyping</p>
+            </div>
   				</div>
   			</header>
   		</div>
