added headline, adjusted lockup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>EBT Near Me</title>
+  	<title>The Office of Policy Prototyping</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <!-- C U S T O M   S T Y L E S -->
@@ -24,6 +24,9 @@
             </div>
   				</div>
   			</header>
+        <div class="hero">
+          <h1 class="headline">Wherein Uber, Lyft, and others share data supporting the future of urban mobility everywhere.</h1>
+        </div>
   		</div>
   	</div>
   </body>
