adding some content, navigation, and layout improvements

--- a/index.html
+++ b/index.html
@@ -23,10 +23,32 @@
               <p class="title">The Office of <br>Policy Prototyping</p>
             </div>
   				</div>
+          <div class="nav">
+            <ul class="nav-list">
+              <li><a href="#context">Context</a></li>
+              <li><a href="#solution">Solution & Scope</a></li>
+              <li><a href="#toc">Table of Contents</a></li>
+              <li><a href="#process">Process</a></li>
+            </ul>
+          </div>
   			</header>
         <div class="hero">
+          <p class="headline-intro">A rather modest proposal</p>
           <h1 class="headline">Wherein Uber, Lyft, and others share data supporting the future of urban mobility everywhere.</h1>
         </div>
+        <section id="context">
+          <h2>Context</h2>
+          <p>Uber and its competitors are rapidly changing the business of how we move around. Governments are racing to catch up. In a weekend sprint, the Office prototyped an ordinance framework compelling these services to operate more transparently, advancing the public interest and urban mobility at large.</p>
+        </section>
+        <section id="solution">
+          <h2>Solution & Scope</h2>
+        </section>
+        <section id="toc">
+          <h2>Table of Contents</h2>
+        </section>
+        <section id="process">
+          <h2>Process</h2>
+        </section>
   		</div>
   	</div>
   </body>
