implemented Bootstrap, plus a simple responsive layout

--- a/index.html
+++ b/index.html
@@ -3,28 +3,9 @@ layout: default
 title: The Office of Policy Prototyping
 ---
 
-
-	<div class="stationary">
-		<div class="identity">
-			<a href="http://policyprototyping.github.io">
-				<img class="logo" src="public/img/logo.png" alt="">
-			</a>
-		</div>
-    <div class="title-block">
-      <p class="title">The Office of <br>Policy Prototyping</p>
-    </div>
-	</div>
-  <div class="nav">
-    <ul class="nav-list">
-      <li><a href="#context">Context</a></li>
-      <li><a href="#solution">Solution & Scope</a></li>
-      <li><a href="#toc">Table of Contents</a></li>
-      <li><a href="#process">Process</a></li>
-    </ul>
-  </div>
-</header>
-<div class="hero">
-  <p class="headline-intro">A rather modest proposal</p>
+{% include content-header.html %}
+<div class="hero col-lg-12">
+  <p class="headlineIntro">A rather modest proposal</p>
   <h1 class="headline">Wherein Uber, Lyft, and others share data supporting the future of urban mobility everywhere.</h1>
 </div>
 <section id="context">
