new header and navigation scheme that makes far more sense

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@ layout: default
 title: The Office of Policy Prototyping
 ---
 
-{% include content-header.html %}
+
 <div class="hero col-lg-12">
-  <p class="headlineIntro">A rather modest proposal</p>
-  <h1 class="headline">Wherein Uber, Lyft, and others share data supporting the future of urban mobility everywhere.</h1>
+  <div class="heroBorder">
+    <p class="headlineIntro">Version 1.0 - December 7, 2014</p>
+    <h1 class="headline">Improving Transportation Network Company (TNC) Data Transparency for Enhanced Urban Planning.</h1>
+  </div>
 </div>
+{% include nav-home.html %}
 <section id="context">
   <h2>Context</h2>
-  <p>Uber and its competitors are rapidly changing the business of how we move around. Governments are racing to catch up. In a weekend sprint, the Office prototyped an ordinance framework compelling these services to operate more transparently, advancing the public interest and urban mobility at large.</p>
 </section>
 <section id="solution">
   <h2>Solution & Scope</h2>
