additional changes to layout and navigation, added placeholder pages for our important sections

--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@ title: The Office of Policy Prototyping
 <div class="hero col-lg-12">
   <div class="heroBorder">
     <p class="headlineIntro">Version 1.0 - December 7, 2014</p>
-    <h1 class="headline">Improving Transportation Network Company (TNC) Data Transparency for Enhanced Urban Planning.</h1>
+    <h1 class="headline">Improving Transportation Network Company (TNC) Data Transparency for Enhanced Urban Planning</h1>
   </div>
 </div>
 {% include nav-home.html %}
-<section id="context">
-  <h2>Context</h2>
-</section>
-<section id="solution">
-  <h2>Solution & Scope</h2>
-</section>
-<section id="toc">
-  <h2>Table of Contents</h2>
-</section>
-<section id="process">
-  <h2>Process</h2>
-</section>
+<div style="width:100%; margin:6em 0; text-align:center;">
+  <p><i>This space is the future home of a table of contents and colophon</i></p>
+</div>
