--- a/model-language.html
+++ b/model-language.html
@@ -5,7 +5,7 @@ title: The Office of Policy Prototyping
 <div class="hero col-lg-12">
 	<div class="heroBorder">
 	  <p class="headlineIntro">Improving Transportation Network Company (TNC) Data Transparency for Enhanced Urban Planning</p>
-	  <h1 class="headline">Executive Summary</h1>
+	  <h1 class="headline">Model Language</h1>
   </div>
 </div>
 {% include nav-exec.html %}
